WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
131884
[iOS][WK2] Fix the dynamic viewport update when the viewport's max-scale conflict with the transition
https://bugs.webkit.org/show_bug.cgi?id=131884
Summary
[iOS][WK2] Fix the dynamic viewport update when the viewport's max-scale conf...
Benjamin Poulain
Reported
2014-04-18 22:24:24 PDT
[iOS][WK2] Fix the dynamic viewport update when the viewport's max-scale conflict with the transition
Attachments
Patch
(2.06 KB, patch)
2014-04-18 22:28 PDT
,
Benjamin Poulain
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Benjamin Poulain
Comment 1
2014-04-18 22:28:29 PDT
Created
attachment 229721
[details]
Patch
Benjamin Poulain
Comment 2
2014-04-21 13:14:30 PDT
Comment on
attachment 229721
[details]
Patch Clearing flags on attachment: 229721 Committed
r167615
: <
http://trac.webkit.org/changeset/167615
>
Benjamin Poulain
Comment 3
2014-04-21 13:14:36 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug